# user-research-analyst

./: .cursorrules  .gitignore  analysis_report_test.xlsx  main.py  parsing.py  pyproject.toml  requirements.txt  results.json  setup.py  transcript.py  transcript3.txt  transcript_analysis.py
data/: analysis_report.xlsx  analysis_report_test.xlsx  config.json  questions.txt  questionsBAK.txt
data/etude_chatbot/: config.json  questions.txt
data/etude_chatbot/raw_transcripts/: fauxinterview_raw.txt
results/: results1.json
src/user_research_analyst.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/user_research_analyst/campaign/: config.py  question_parsing.py  report_builder.py
src/user_research_analyst/result_analysis/: answers_analysis.py  data.py  excel_parsing.py  segments.py
src/user_research_analyst/transcript/: transcript_analysis.py  transcript_builder.py
