[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "user-research-analyst"
version = "0.1.0"
authors = [
    { name="Olivier Motelet", email="olivier.motelet@gmail.com" },
]
description = "Trancription d’entretien utilisateur et Analyse des résultats"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["user_research_analyst"]
